// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlatformRedirectLink renders with to 1`] = `
<a
  className=""
  href="/platform-redirect/?next=%2Fenriching-error-data%2F"
>
  /platform-redirect/?next=%2Fenriching-error-data%2F
</a>
`;

exports[`PlatformRedirectLink renders without to 1`] = `
<a
  className=""
  href="/platform-redirect/"
>
  /platform-redirect/
</a>
`;
